# QueueCtl

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  PHASE3_QUICKSTART.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
queuectl/: __init__.py  cli.py  config.py  dependencies.py  metrics.py  migrations.py  models.py  queue.py  storage.py  utils.py  webhooks.py  worker.py
queuectl/web/: __init__.py  app.py  socketio_handlers.py
queuectl/web/static/css/: style.css
queuectl/web/static/js/: dashboard.js  graph.js
queuectl/web/templates/: dashboard.html  graph.html  jobs.html  logs.html
tests/: test_phase1_enhancements.py  test_phase2.py  test_phase3.py  test_unit.py
