[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "queuectl"
version = "2.0.0"
description = "A production-grade CLI-based background job queue system"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [
    {name = "HARINARAYANAN U", email = "hari.narayanan1402@gmail.com"},
]
keywords = ["queue", "job", "worker", "cli", "background", "task"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Distributed Computing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=7.0",
    "requests>=2.20",
    "flask>=2.0",
    "flask-cors>=3.0",
    "croniter>=1.0",
]

[project.optional-dependencies]
realtime = ["flask-socketio>=5.0", "python-socketio>=5.0"]
dev = ["pytest>=7.0", "flake8>=5.0"]
all = ["queuectl[realtime,dev]"]

[project.scripts]
queuectl = "queuectl.cli:cli"

[project.urls]
Homepage = "https://github.com/IamHarriiii/Queuectl"
Repository = "https://github.com/IamHarriiii/Queuectl"
Issues = "https://github.com/IamHarriiii/Queuectl/issues"
Changelog = "https://github.com/IamHarriiii/Queuectl/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_unit.py"]

[tool.flake8]
max-line-length = 120
exclude = [".git", "__pycache__", "*.egg-info", "venv"]
